--- a/res/scss/_body.scss
+++ b/res/scss/_body.scss
@@ -12,9 +12,13 @@ body {
   color: $color1;
   font-size: 16px;
   margin: 0 5%;
-  @media (min-width: 1200px) {
+  @media (max-width: 1200px) {
     font-size: 14px;
   }
+}
+
+p {
+  font-size: 16px;
 }
 
 ul {
@@ -44,6 +48,11 @@ h2 {
   margin-bottom: 16px;
 }
 
+h3 {
+  font-size: 1em;
+  text-transform: uppercase;
+}
+
 p.intro {
   font-size: 1.25em;
 }
@@ -68,16 +77,16 @@ p.intro {
 }
 
 .row-header {
-  & .col-md-8 {
+  .col-md-8 {
     height: 7em;
-    & .menu-top {
+    .menu-top {
       list-style: none;
       height: 100%;
       padding: 0;
       margin: 0;
       width: 50%;
       @include flexbox;
-      & li {
+      li {
         height: 100%;
         box-shadow: inset 0px 8px 0px 0px rgba(84, 84, 84, .2);
         transition: 0.2s ease all;
@@ -94,7 +103,7 @@ p.intro {
         &:active {
           box-shadow: inset 0px 112px 0px 0px #ddd;
         }
-        & a {
+        a {
           color: #545454;
           height: 100%;
           display: block;
@@ -108,9 +117,9 @@ p.intro {
       }
     }
   }
-  & .col-md-4 {
+  .col-md-4 {
     height: 7em;
-    & .myButton {
+    .myButton {
       background-color: #edba18;
     }
   }
@@ -142,18 +151,18 @@ p.intro {
   color: $color2;
   padding: 0;
   height: 4em;
-  & ul {
+  ul {
     list-style: none;
     width: 67%;
     height: 100%;
     @include flexbox;
-    & li {
+    li {
       height: 100%;
       width: 25%;
       text-align: center;
     }
   }
-  & .side-pro {
+  .side-pro {
     height: 100%;
     width: 33%;
     background-color: $color4;
@@ -163,7 +172,7 @@ p.intro {
       box-shadow: inset 0px 0px 0px 100px rgba(10, 45, 57, .8);
     }
   }
-  & a {
+  a {
     display: block;
     height: 100%;
     padding-top: 1.313em;
@@ -185,13 +194,13 @@ section.deco {
 }
 
 .carousel {
-  & .carousel-control {
+  .carousel-control {
     width: 5%;
     transition: 0.3s ease all;
     -moz-transition: 0.3s ease all;
     -webkit-transition: 0.3s ease all;
     background-image: none !important;
-    & i {
+    i {
       position: absolute;
       top: 40%;
       font-size: 1.5em;
@@ -207,8 +216,8 @@ section.deco {
 
 .slider-main {
   padding: 0;
-  & .carousel-inner {
-    & .item {
+  .carousel-inner {
+    .item {
       height: 55em;
       background: url("img/slider-01.png") no-repeat center center;
       background-size: cover;
@@ -238,7 +247,7 @@ section.deco {
   font-weight: 300;
   &:hover, &:focus, &:active {
     color: $color2;
-    & i {
+    i {
       transform: translateX(16px);
     }
   }
@@ -260,8 +269,9 @@ section.deco {
   background-size: cover;
   .encart-pro {
     background-color: $color4;
+    overflow: hidden;
   }
-  & img {
+  img {
     width: 100%;
   }
 }
@@ -269,9 +279,9 @@ section.deco {
 .row.content-a,
 .row.content-c {
   margin-top: 1em;
-  & .col-md-12 {
+  .col-md-12 {
     padding: 0;
-    & img {
+    img {
       width: 100%;
       height: auto;
     }
@@ -281,15 +291,15 @@ section.deco {
 .row.content-b,
 .row.content-d {
   margin-top: 1em;
-  & .col-md-12 {
+  .col-md-12 {
     padding: 0;
-    & .circle {
+    .circle {
       position: absolute;
       z-index: 999;
       width: 25em;
       top: -12.5em;
       left: 23%;
-      & .circle-content {
+      .circle-content {
         height: 0;
         padding: 50% 0;
         text-align: center;
@@ -308,22 +318,22 @@ section.deco {
         &:hover {
           background-color: $color4;
         }
-        & .carousel-indicators {
+        .carousel-indicators {
           position: relative;
           width: auto;
           margin: 1em 0;
           left: 0;
           bottom: 0;
         }
-        & .circle-title {
+        .circle-title {
           font-weight: 100;
           font-size: 3.5em;
           letter-spacing: -4px;
         }
-        & .circle-text {
+        .circle-text {
           font-size: 1.5em;
           font-weight: 100;
-          & i {
+          i {
             transition: 0.3s ease all;
             -moz-transition: 0.3s ease all;
             -webkit-transition: 0.3s ease all;
@@ -335,9 +345,9 @@ section.deco {
         }
       }
     }
-    & .carousel-inner {
-      & .item {
-        & .flex {
+    .carousel-inner {
+      .item {
+        .flex {
           @include flex-wrap(no-wrap);
           & > div {
             width: 33%;
@@ -346,11 +356,11 @@ section.deco {
             &:last-of-type {
               margin-right: 0;
             }
-            & img {
+            img {
               width: 100%;
               height: auto;
             }
-            & a {
+            a {
               @extend .myButton;
               margin: 0;
               font-weight: 300;
@@ -361,14 +371,14 @@ section.deco {
               right: 0;
               bottom: 1em;
               padding: 1em;
-              & i {
+              i {
                 transition: 0.3s ease all;
                 -moz-transition: 0.3s ease all;
                 -webkit-transition: 0.3s ease all;
                 margin: 6px 0 0 16px;
               }
               &:hover {
-                & i {
+                i {
                   transform: translateX(10px);
                 }
               }
@@ -377,8 +387,8 @@ section.deco {
         }
       }
     }
-    & .carousel-control {
-      & i {
+    .carousel-control {
+      i {
         color: $color1;
         background: rgba($color2, .8);
         padding: 1em;
@@ -392,7 +402,7 @@ section.deco {
 }
 
 .row.content-d {
-  & .circle {
+  .circle {
     right: 23%;
     left: auto !important;
   }
@@ -400,7 +410,7 @@ section.deco {
 
 .row.content-e {
   text-align: center;
-  & p {
+  p {
     font-weight: 100;
     font-size: 3.5em;
     letter-spacing: -4px;
@@ -421,42 +431,130 @@ section.deco {
 }
 
 .row.content-f {
-  & .flex {
-    @include flex-wrap(no-wrap);
-    & > div {
-      width: 33%;
-      margin-right: 1em;
-      position: relative;
-      &:last-of-type {
-        margin-right: 0;
-      }
-      & img {
-        width: 100%;
-        height: auto;
-      }
-      & a {
-        @extend .myButton;
-        margin: 0;
-        font-weight: 300;
-        font-size: 1.5em;
-        position: absolute;
-        display: block;
-        background: rgba($color2, .8);
-        right: 0;
-        bottom: 1em;
-        padding: 1em;
-        & i {
-          transition: 0.3s ease all;
-          -moz-transition: 0.3s ease all;
-          -webkit-transition: 0.3s ease all;
-          margin: 6px 0 0 16px;
+  .col-md-12 {
+    padding: 0;
+    .flex {
+      @include flex-wrap(no-wrap);
+      padding: 0;
+      & > div {
+        width: 33%;
+        margin-right: 1em;
+        position: relative;
+        &:last-of-type {
+          margin-right: 0;
         }
-        &:hover {
-          & i {
-            transform: translateX(10px);
+        img {
+          width: 100%;
+          height: auto;
+        }
+        a {
+          @extend .myButton;
+          margin: 0;
+          font-weight: 300;
+          font-size: 1.5em;
+          position: absolute;
+          display: block;
+          background: rgba($color2, .8);
+          right: 0;
+          bottom: 1em;
+          padding: 1em;
+          i {
+            transition: 0.3s ease all;
+            -moz-transition: 0.3s ease all;
+            -webkit-transition: 0.3s ease all;
+            margin: 6px 0 0 16px;
+          }
+          &:hover {
+            i {
+              transform: translateX(10px);
+            }
           }
         }
       }
     }
+  }
+}
+
+.row.footer {
+  margin-top: 1em;
+  color: $color2;
+  font-weight: 300;
+  background-color: lighten($color1, 3%);
+  @include flexbox;
+  @media (max-width: 788px) { //Random breakpoint
+    display: block;
+  }
+  & > * {
+    padding: 2em 0;
+    & > * {
+      padding-left: 3em !important;
+      padding-right: 3em !important;
+    }
+  }
+  .title-footer {
+    &:after {
+      content: '';
+      display: block;
+      width: 40px;
+      height: 1px;
+      background-color: $color2;
+      margin-top: 2em;
+    }
+  }
+  .menu-bot {
+    list-style: none;
+    width: 100%;
+    @include align-items(flex-start);
+    li {
+      text-align: center;
+      width: 25%;
+      padding: 2em;
+      height: 15em;
+      position: relative;
+      img {
+        display: block;
+        margin: 0 auto 1.5em auto;
+      }
+      &:after {
+        content: '';
+        position: absolute;
+        display: block;
+        width: 1px;
+        height: 30px;
+        bottom: 50%;
+        right: 0;
+        background-color: rgba($color2, .1);
+      }
+      &:last-of-type:after {
+        display: none;
+      }
+    }
+  }
+  .col-md-4 {
+    background-color: $color1;
+  }
+  .about {
+    padding: 2em 0;
+    @include flexbox;
+    @include justify-content(space-between);
+    ul {
+      list-style: none;
+      & li {
+        padding: .5em 0;
+      }
+    }
+  }
+  .social {
+    @extend .about;
+    & i {
+      width: 1.5em;
+    }
+  }
+  .legal {
+    position: absolute;
+    bottom: 2em;
+    display: block;
+    width: 100%;
+    font-size: 14px;
   }
 }
