--- a/res/template/index.html
+++ b/res/template/index.html
@@ -7,7 +7,7 @@
 <div class="wrapper">
     <section class="row row-header">
         <div class="col-md-8 flex">
-            <img src="img/logo.png" width="274" height="40"/>
+            <img src="img/logo.png"/>
             <ul class="menu-top">
                 <li><a href="#">Catalogue</a></li>
                 <li><a href="#">Votre projet</a></li>
@@ -335,10 +335,72 @@
     </section>
     <section class="row footer">
         <div class="col-md-6 col-xs-12">
+            <div class="title-footer">
+                <img src="img/logo_footer.png"/>
+            </div>
+            <ul class="menu-bot flex">
+                <li>
+                    <img src="img/picto-footer-01.png"/>
+                    <p>Maison fondée en 1855</p>
+                </li>
+                <li>
+                    <img src="img/picto-footer-02.png"/>
+                    <p>Des conseillers à votre écoute</p></li>
+                <li>
+                    <img src="img/picto-footer-03.png"/>
+                    <p>Un réseau d'installeur</p></li>
+                <li>
+                    <img src="img/picto-footer-04.png"/>
+                    <p>Suivi et qualité des produits de nos fabriquants</p></li>
+            </ul>
         </div>
         <div class="col-md-4 col-xs-12">
+            <div class="title-footer">
+                <h3>A propos</h3>
+            </div>
+            <div class="about">
+                <ul>
+                    <li>
+                        <a href="#">Qui sommes-nous ?</a>
+                    </li>
+                    <li>
+                        <a href="#">Presse</a>
+                    </li>
+                    <li>
+                        <a href="#">Matières plastiques</a>
+                    </li>
+                    <li>
+                        <a href="#">Nous contacter</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#">Nous rejoindre</a>
+                    </li>
+                    <li>
+                        <a href="#">Plan du site</a>
+                    </li>
+                    <li>
+                        <a href="#">Mentions Légales</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="col-md-2 col-xs-12">
+            <div class="title-footer">
+                <h3>Rejoignez-nous sur</h3>
+            </div>
+            <div class="social">
+                <ul>
+                    <li>
+                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i> &nbsp;Facebook</a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i> &nbsp;Google +</a>
+                    </li>
+                </ul>
+                <a class="legal" href="#">©  2016 - Tous droits réservés</a>
+            </div>
         </div>
     </section>
 </div>
